RG-2674 use flex-gap instead of margins to avoid clashing with pseudo-link zero margin

--- a/src/pager/pager.css
+++ b/src/pager/pager.css
@@ -5,13 +5,14 @@
 }
 
 .links {
+  display: flex;
+  gap: calc(var(--ring-unit) * 2);
+
   margin-bottom: calc(var(--ring-unit) * 2);
 }
 
 .link {
   display: inline-block;
-
-  margin-right: calc(var(--ring-unit) * 2);
 }
 
 .linkDisabled {
